# deep-segmentator

./: .gitignore  README.md  pixi.toml  pyproject.toml
configs/: ablations.yaml  default.yaml  full_model.yaml  hpo_full_model.yaml  hpo_gan_only.yaml  training.yaml
configs/datasets/: abcd.yaml  abide.yaml  custom_template.yaml  senior.yaml  ukbiobank.yaml
configs/hyperparams/: eas_hypers.yaml  gan_hypers.yaml  laplace_hypers.yaml
scripts/: download_datasets.py  evaluate_nnunet.py  extract_best_params.py  generate_slurm_jobs.py  infer_nnunet.py  monitor_hpo.py  monitor_training.py  prepare_nnunet_dataset.py  preprocess_all.py  setup.py  train_monai_nnunet.py
slurm_templates/: hpo_multi_node.slurm  hpo_single_node.slurm
src/sulcal_seg/champollion_integration/: __init__.py  downstream_tasks.py  embedding_validator.py  segmentation_to_embeddings.py
src/sulcal_seg/config/: __init__.py  ablation_config.py  base_config.py  data_config.py  model_config.py  training_config.py  validation_config.py
src/sulcal_seg/data/: __init__.py  abstract_loader.py  dataset_manager.py
src/sulcal_seg/experiments/: __init__.py  run_ablations.py  train_eas.py  train_full.py  train_gan.py  train_laplace.py  validate_model.py
src/sulcal_seg/hpo/: __init__.py  cluster_manager.py  objective_functions.py  optuna_optimizer.py  pruning.py  (+2 more)
tests/: conftest.py
tests/fixtures/: __init__.py  mock_configs.py  sample_data.py
tests/unit/: test_builder.py  test_data_loaders.py  test_dataset_manager.py  test_eas_component.py  test_gan_component.py  test_laplace_component.py  test_metrics.py
(+59 files in other folders)
